// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SemesterService getAllSemesters should return all semesters 1`] = `
[
  SemesterModel {
    "course_count": 10,
    "created_at": "1000000",
    "ends_at": "1000000",
    "id": 1,
    "name": "Test Semester",
    "starts_at": "1000000",
    "updated_at": "1000000",
  },
]
`;

exports[`SemesterService getSemesterById should return a semester 1`] = `
SemesterModel {
  "created_at": "1000000",
  "ends_at": "1000000",
  "id": 1,
  "name": "Test Semester",
  "starts_at": "1000000",
  "updated_at": "1000000",
}
`;
